# chefai

./: .env.example  .gitignore  CLAUDE.md  README.md  constants.py  embed_recipes.py  extractor_guide.ipynb  indice_trovato.md  pyproject.toml  recover_batch.py  requirements.txt  ricette.json  test.ipynb
chefai/: __init__.py  extractor.py  feed_embedder.py  parser.py
scripts/: build_corpus.py
tests/: test_chefai.py  test_chefai_findings_plan.md  test_feed_embedder.py
